[project]
name = "dbgpt-mono"
version = "0.7.0"
description = "Add your description here"
authors = [
    { name = "aries_ckt", email = "ariesketing@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[tool.uv.sources]
dbgpt = { workspace = true }
dbgpt-client = { workspace = true }
dbgpt-ext = { workspace = true }
dbgpt-serve = { workspace = true }
dbgpt-app = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/dbgpt-*"
]

[tool.uv]
managed = true
dev-dependencies = [
    "pip",
    "tomli>=2.0.2",
    "tomli-w>=1.1.0",
    "pytest>=7.0.0",
    "twine",
]

[tool.pytest.ini_options]
pythonpath = ["packages"]
addopts = ["--import-mode=importlib", ]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "packages/dbgpt-core/src/dbgpt/model/**",
]
[tool.ruff.format]
# Format docstrings
docstring-code-format = true
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
# Enable: eror check, import order
select = ["E", "F", "I"]