[project]
name = "dbgpt-mono"
version = "0.7.0"
description = """DB-GPT is an experimental open-source project that uses localized GPT \
large models to interact with your data and environment. With this solution, you can be\
 assured that there is no risk of data leakage, and your data is 100% private and secure.\
"""
authors = [
    { name = "csunny", email = "cfqcsunny@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[tool.uv.sources]
dbgpt-accelerator = { workspace = true }
dbgpt = { workspace = true }
dbgpt-client = { workspace = true }
dbgpt-ext = { workspace = true }
dbgpt-serve = { workspace = true }
dbgpt-app = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/dbgpt-*"
]

[tool.uv]
managed = true
dev-dependencies = [
    "pip",
    "tomli>=2.0.2",
    "tomli-w>=1.1.0",
    "pytest>=7.0.0",
    "pytest_asyncio",
    "twine",
    "ruff>=0.9.1",
]

[tool.pytest.ini_options]
pythonpath = ["packages"]
addopts = ["--import-mode=importlib", ]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
# Format docstrings
docstring-code-format = true
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
# Enable: eror check, import order
select = ["E", "F", "I"]

[tool.ruff.isort]
# Specify the local modules (first-party)
known-first-party = ["dbgpt", "dbgpt_accelerator", "dbgpt_client", "dbgpt_ext", "dbgpt_serve", "dbgpt_app"]
