[project]
name = "dbgpt-app"
version = "0.7.0"
description = "Add your description here"
authors = [
    { name = "aries_ckt", email = "ariesketing@gmail.com" }
]
dependencies = [
    "dbgpt-serve",
    "aiofiles",
    "sentence-transformers",
    "pyparsing",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dbgpt_app"]
